--- a/css/styles.css
+++ b/css/styles.css
@@ -756,18 +756,64 @@ address {
   background-color: var(--accent-color);
 }
 
+.footer-form {
+  padding-top: 12px;
+}
+.subs-form {
+  display: flex;
+}
+
 .form-title {
+  font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
-  color: #ffffff;
-
+  color: var(--primary-white-color);
+  padding-top: 20px;
   margin-bottom: 20px;
 }
 
+.footer-button {
+  margin: 0;
+  position: relative;
+}
+
+.footer-form-button {
+  border: none;
+  padding: 0;
+  margin: 0;
+  margin-right: 10px;
+  margin-left: 12px;
+
+  width: 200px;
+  height: 50px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.footer-form-icon {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+
+  top: 13px;
+  right: 28px;
+  bottom: 13px;
+}
 /* Modal Window */
 
 .backdrop {
@@ -791,6 +837,8 @@ address {
 }
 
 .modal {
+  padding: 40px;
+
   position: absolute;
   top: 50%;
   left: 50%;
@@ -799,8 +847,8 @@ address {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
 
   background: var(--primary-white-color);
   border-radius: 4px;
@@ -819,11 +867,18 @@ address {
 
   top: 8px;
   right: 8px;
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
   width: 30px;
   height: 30px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  fill: var(--accent-color);
 }
 
 .modal-icon {
@@ -834,82 +889,195 @@ address {
 /* Modal window Form */
 
 .modal-form {
-  padding: 40px;
-  padding-top: 0;
-
-  border: none;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-form-title {
-  padding-top: 40px;
-  padding-bottom: 0;
-
   margin-bottom: 12px;
 
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.03em;
 
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .form-label {
+  margin-bottom: 10px;
+}
+
+.form-label-text {
+  display: block;
+  margin-bottom: 4px;
+
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 
-  color: #757575;
+  color: var(--primary-text-color);
 }
+
+.form-label-text.massage {
+  margin-bottom: 20px;
+}
+
 .form-input {
   width: 100%;
   height: 40px;
-  margin-bottom: 28px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  padding: 0;
+  padding-left: 42px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+.form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-icon-wrapper {
+  display: block;
+  position: relative;
+}
+
+.modal-form-icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+
+  width: 12px;
+  height: 12px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-message {
   padding: 12px 16px;
-  margin-bottom: 20px;
 
   width: 100%;
   height: 120px;
 
   resize: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  font-size: 14px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-checkbox {
-  margin-right: 8.38px;
-  margin-bottom: 30px;
+.form-message:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.form-message::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-massage-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+
+  margin-bottom: 4px;
+}
+
+/* Checkbox */
+
+.modal-form-chec-desc::before {
+  content: '';
+  display: block;
+
+  width: 16px;
+  height: 15px;
+
+  border: 1px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-right: 8px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-checkbox:checked + .modal-form-chec-desc::before {
+  background-color: var(--accent-color);
+  background-image: url(../images/check.svg);
+
+  background-repeat: no-repeat;
+  background-position: center;
+
+  border: none;
+}
+
+.input-checkbox:focus + .modal-form-chec-desc::before {
+  border: none;
+  outline: 1px solid var(--accent-color);
+}
+
+.modal-link {
+  color: var(--accent-color);
+}
+
+.modal-form-chec-desc {
+  display: flex;
+  align-items: center;
 
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
 
   letter-spacing: 0.03em;
 
-  color: #757575;
+  color: var(--primary-text-color);
+
+  margin-bottom: 30px;
 }
 
-.form-button {
-  display: flex;
-  justify-content: center;
-}
+/* Modal  form-button  */
+
 .contact-form-button {
-  border: none;
-  padding: 0;
+  align-self: center;
 
-  width: 200px;
+  border: none;
+  padding: 10px 55px;
+
+  min-width: 200px;
   height: 50px;
+
+  font-family: Roboto;
+  font-weight: 700;
 
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  align-items: center;
+
   text-align: center;
   letter-spacing: 0.06em;
 
   color: #ffffff;
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-button:hover,
+.contact-form-button:focus {
+  background: var(--secondary-accent-color);
 }
