--- a/css/styles.css
+++ b/css/styles.css
@@ -810,9 +810,7 @@ address {
 
   margin: 0;
 
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 29px;
+  padding: 10px 28px 10px 29px;
 
   margin-left: 12px;
 
